# azure-jira-mcp-agents

./: .env.sample  .gitignore  README.md  agent_runner.py  main.py  pyproject.toml
agents/: agent_azure.py  agent_jira.py  agent_manager.py
